[gd_scene load_steps=19 format=3 uid="uid://bd81t3ywtdynk"]

[ext_resource type="Script" path="res://Scripts/Juegos/Controllers/game_controller_ruleta.gd" id="1_6d8p0"]
[ext_resource type="Texture2D" uid="uid://bj7kr4vnsvxxb" path="res://images/Juegos/Ruleta/ruleta.png" id="1_45eqn"]
[ext_resource type="Texture2D" uid="uid://b4icwsejgesow" path="res://images/Juegos/Ruleta/Fondo.png" id="2_hkxan"]
[ext_resource type="FontFile" uid="uid://ex6sf638yhh5" path="res://font/Chonky Bunny.ttf" id="4_8j8vm"]
[ext_resource type="Texture2D" uid="uid://ba4qftiyc6p7n" path="res://images/Juegos/Ruleta/Manilla.png" id="4_g3jfc"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_ooip7"]
bg_color = Color(0, 0, 0, 1)
corner_radius_top_left = 15
corner_radius_top_right = 15
corner_radius_bottom_right = 15
corner_radius_bottom_left = 15

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_s031j"]

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_boef8"]

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_ndvsd"]

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_4aipu"]

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_d6evd"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_gkglt"]
bg_color = Color(0, 0, 0, 1)
border_width_left = 3
border_width_top = 3
border_width_right = 3
border_width_bottom = 3
border_color = Color(1, 1, 1, 1)
corner_radius_top_left = 15
corner_radius_top_right = 15
corner_radius_bottom_right = 15
corner_radius_bottom_left = 15

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_xu5ya"]

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_wpj76"]

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_vhli7"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_tm4b3"]
bg_color = Color(0, 0, 0, 1)
corner_radius_top_left = 15
corner_radius_top_right = 15
corner_radius_bottom_right = 15
corner_radius_bottom_left = 15

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_q66pv"]

[sub_resource type="LabelSettings" id="LabelSettings_7ucme"]
font = ExtResource("4_8j8vm")
font_size = 70

[node name="CanvasLayer" type="CanvasLayer"]

[node name="RuletaScene" type="Node2D" parent="."]
script = ExtResource("1_6d8p0")

[node name="TextureRect" type="TextureRect" parent="RuletaScene"]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_top = -2.0
offset_right = 1156.0
offset_bottom = 650.0
grow_horizontal = 2
grow_vertical = 2
texture = ExtResource("2_hkxan")
expand_mode = 3

[node name="SpriteRuleta" type="Sprite2D" parent="RuletaScene"]
position = Vector2(583, 322)
texture = ExtResource("1_45eqn")

[node name="OPERACIONES CON NÚMEROS NATURALES" type="Area2D" parent="RuletaScene/SpriteRuleta"]

[node name="CollisionPolygon2D" type="CollisionPolygon2D" parent="RuletaScene/SpriteRuleta/OPERACIONES CON NÚMEROS NATURALES"]
polygon = PackedVector2Array(22, -24, 154, -247, 241, -158)

[node name="FRACCIONES" type="Area2D" parent="RuletaScene/SpriteRuleta"]

[node name="CollisionPolygon2D" type="CollisionPolygon2D" parent="RuletaScene/SpriteRuleta/FRACCIONES"]
polygon = PackedVector2Array(12, -29, 11, -285, 129, -254)

[node name="NÚMEROS DECIMALES" type="Area2D" parent="RuletaScene/SpriteRuleta"]

[node name="CollisionPolygon2D" type="CollisionPolygon2D" parent="RuletaScene/SpriteRuleta/NÚMEROS DECIMALES"]
polygon = PackedVector2Array(-9, -30, -11, -288, -127, -254)

[node name="PROBLEMAS CON MÚLTIPLOS Y DIVISORES" type="Area2D" parent="RuletaScene/SpriteRuleta"]

[node name="CollisionPolygon2D" type="CollisionPolygon2D" parent="RuletaScene/SpriteRuleta/PROBLEMAS CON MÚLTIPLOS Y DIVISORES"]
polygon = PackedVector2Array(-24, -25, -158, -239, -237, -156)

[node name="PERÍMETRO Y ÁREA" type="Area2D" parent="RuletaScene/SpriteRuleta"]

[node name="CollisionPolygon2D" type="CollisionPolygon2D" parent="RuletaScene/SpriteRuleta/PERÍMETRO Y ÁREA"]
polygon = PackedVector2Array(-28, -10, -259, -134, -287, -17)

[node name="MEDICIÓN Y UNIDADES" type="Area2D" parent="RuletaScene/SpriteRuleta"]

[node name="CollisionPolygon2D" type="CollisionPolygon2D" parent="RuletaScene/SpriteRuleta/MEDICIÓN Y UNIDADES"]
polygon = PackedVector2Array(-28, 9, -288, 14, -257, 128)

[node name="PORCENTAJES" type="Area2D" parent="RuletaScene/SpriteRuleta"]

[node name="CollisionPolygon2D" type="CollisionPolygon2D" parent="RuletaScene/SpriteRuleta/PORCENTAJES"]
polygon = PackedVector2Array(-23, 24, -155, 238, -236, 156)

[node name="GRÁFICAS Y DATOS" type="Area2D" parent="RuletaScene/SpriteRuleta"]

[node name="CollisionPolygon2D" type="CollisionPolygon2D" parent="RuletaScene/SpriteRuleta/GRÁFICAS Y DATOS"]
polygon = PackedVector2Array(-7, 31, -11, 289, -128, 253)

[node name="PATRONES Y SECUENCIAS" type="Area2D" parent="RuletaScene/SpriteRuleta"]

[node name="CollisionPolygon2D" type="CollisionPolygon2D" parent="RuletaScene/SpriteRuleta/PATRONES Y SECUENCIAS"]
polygon = PackedVector2Array(10, 33, 134, 255, 13, 289)

[node name="ÁNGULOS Y GEOMETRÍA" type="Area2D" parent="RuletaScene/SpriteRuleta"]

[node name="CollisionPolygon2D" type="CollisionPolygon2D" parent="RuletaScene/SpriteRuleta/ÁNGULOS Y GEOMETRÍA"]
polygon = PackedVector2Array(25, 22, 153, 241, 240, 152)

[node name="PROBABILIDAD BÁSICA" type="Area2D" parent="RuletaScene/SpriteRuleta"]

[node name="CollisionPolygon2D" type="CollisionPolygon2D" parent="RuletaScene/SpriteRuleta/PROBABILIDAD BÁSICA"]
polygon = PackedVector2Array(34, 7, 248, 130, 287, 10)

[node name="ECUACIONES SENCILLAS" type="Area2D" parent="RuletaScene/SpriteRuleta"]

[node name="CollisionPolygon2D" type="CollisionPolygon2D" parent="RuletaScene/SpriteRuleta/ECUACIONES SENCILLAS"]
polygon = PackedVector2Array(33, -10, 288, -14, 256, -131)

[node name="AreaManecilla" type="Area2D" parent="RuletaScene"]

[node name="SpriteManecilla" type="Sprite2D" parent="RuletaScene/AreaManecilla"]
position = Vector2(583, 81)
texture = ExtResource("4_g3jfc")

[node name="CollisionPolygon2D" type="CollisionPolygon2D" parent="RuletaScene/AreaManecilla"]
visible = false
polygon = PackedVector2Array(589, 0, 588, 159, 578, 159, 578, -1)

[node name="Timer" type="Timer" parent="RuletaScene"]

[node name="Button" type="Button" parent="RuletaScene"]
offset_left = 930.0
offset_top = 558.0
offset_right = 1135.0
offset_bottom = 622.0
theme_override_fonts/font = ExtResource("4_8j8vm")
theme_override_font_sizes/font_size = 50
theme_override_styles/focus = SubResource("StyleBoxFlat_ooip7")
theme_override_styles/disabled_mirrored = SubResource("StyleBoxEmpty_s031j")
theme_override_styles/disabled = SubResource("StyleBoxEmpty_boef8")
theme_override_styles/hover_pressed_mirrored = SubResource("StyleBoxEmpty_ndvsd")
theme_override_styles/hover_pressed = SubResource("StyleBoxEmpty_4aipu")
theme_override_styles/hover_mirrored = SubResource("StyleBoxEmpty_d6evd")
theme_override_styles/hover = SubResource("StyleBoxFlat_gkglt")
theme_override_styles/pressed_mirrored = SubResource("StyleBoxEmpty_xu5ya")
theme_override_styles/pressed = SubResource("StyleBoxEmpty_wpj76")
theme_override_styles/normal_mirrored = SubResource("StyleBoxEmpty_vhli7")
theme_override_styles/normal = SubResource("StyleBoxFlat_tm4b3")
text = "PULSA"

[node name="Panel" type="Panel" parent="RuletaScene"]
offset_left = 73.0
offset_top = 268.0
offset_right = 1097.0
offset_bottom = 399.0
theme_override_styles/panel = SubResource("StyleBoxEmpty_q66pv")

[node name="Win" type="Label" parent="RuletaScene/Panel"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
size_flags_horizontal = 4
label_settings = SubResource("LabelSettings_7ucme")
horizontal_alignment = 1
vertical_alignment = 1

[connection signal="area_entered" from="RuletaScene/AreaManecilla" to="RuletaScene" method="_on_area_manecilla_area_entered"]
[connection signal="pressed" from="RuletaScene/Button" to="RuletaScene" method="_on_button_pressed"]
